Make the .aws bind mount writable

--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: ghcr.io/d3b-center/terraform:1.1.6
     volumes:
       - ../:/usr/local/src
-      - $HOME/.aws:/.aws:ro
+      - $HOME/.aws:/.aws
     environment:
       - AWS_PROFILE
       - TERRAFORM_AWS_VPC_DEBUG=1
